<resources>
    <string name="app_name">Lista Contatos SlidingPane</string>
    <string name="contact_list_item_full_name_default">Full Name</string>
    <string name="contact_list_item_email_label">Email</string>
    <string name="contact_list_item_email_default">name@mail.com</string>
    <string name="contact_list_item_phone_label">Phone</string>
    <string name="contact_list_item_phone_default">+00 (00) 1 2345–6789</string>
    <string name="contact_list_item_address_label">Address</string>
    <string name="contact_list_item_address_default">Example St. 123</string>
</resources>